REFACTOR mattress architecture to be crate based